fix: tighten up spacing on intro blocks

--- a/src/assets/css/about.scss
+++ b/src/assets/css/about.scss
@@ -26,12 +26,12 @@
       font-family: variables.$ap-bold;
       font-size: 19px;
       letter-spacing: 1.56px;
+      margin-bottom: 30px;
     }
     h3 {
       font-size: 46px;
       line-height: 57px;
       width: 85%;
-      margin-top: 88px;
       font-family: variables.$opt;
     }
   }
@@ -339,7 +339,7 @@
         font-family: variables.$ap-bold;
         font-size: 15px;
         letter-spacing: 1.23px;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
       }
 
       h3 {
