--- a/src/assets/css/blog-post.scss
+++ b/src/assets/css/blog-post.scss
@@ -113,70 +113,6 @@
     }
   }
 
-  .policies-body {
-    width: 80%;
-    margin-top: 110px;
-    margin-left: 110px;
-
-    h4 {
-      font-family: variables.$ap;
-      font-size: 20px;
-      letter-spacing: 0.8px;
-      line-height: 40px;
-      color: variables.$pink;
-      text-transform: uppercase;
-      margin-bottom: 18px;
-    }
-
-    ul {
-      margin-top: 50px;
-
-      li {
-        position: relative;
-      }
-
-      li:before {
-        content: "";
-        width: 40px;
-        border-bottom: 1px solid variables.$pink;
-        position: absolute;
-        left: 0px;
-        top: 16px;
-      }
-
-      h6 {
-        font-family: variables.$ap;
-        font-size: 20px;
-        line-height: 33px;
-        margin-bottom: 14px;
-        margin-left: 60px;
-      }
-
-      p {
-        margin-left: 60px;
-      }
-    }
-
-    p {
-      font-family: variables.$ap;
-      font-size: 20px;
-      line-height: 33px;
-      margin-bottom: 38px;
-    }
-
-    .cta {
-      margin-top: 90px;
-    }
-
-    a {
-      font-family: variables.$ap-bold;
-      line-height: 33px;
-      margin-bottom: 14px;
-      font-size: 20px;
-      color: black;
-    }
-  }
-
   .footer {
     margin-top: 340px;
   }
