--- a/src/assets/css/careers.scss
+++ b/src/assets/css/careers.scss
@@ -20,7 +20,7 @@
 
   .intro {
     padding: 0 48px;
-    margin: 40px 84px 60px;
+    margin: 30px 84px 60px;
     width: 70%;
 
     h3 {
