--- a/src/assets/css/services.scss
+++ b/src/assets/css/services.scss
@@ -21,7 +21,7 @@
     }
 
     h3 {
-      margin-top: 92px;
+      margin-top: 30px;
       font-family: variables.$opt;
       font-size: 46px;
       line-height: 57px;
@@ -180,7 +180,7 @@
       }
 
       h3 {
-        margin-top: 30px;
+        margin-top: 20px;
         font-size: 37px;
         line-height: 38px;
       }
